fix(style): illegible text in card header
Fixes #2375

--- a/less/chat/common-chat.less
+++ b/less/chat/common-chat.less
@@ -16,13 +16,16 @@
       margin-right: 5px;
     }
 
+    .item-name {
+      display: flex;
+      flex-flow: row wrap;
+    }
+
     h3 {
       flex: 1;
       margin: 0;
       border: unset;
       .nodesto();
-      color: @colorOlive;
-      align-self: center;
     }
   }
 
